# polyfix

./: ExFindExtended.hs  Expr.hs  M.hs  ParseType.hs  SimpleFT.hs  Term2Expr.hs  TestGen.hs  TestItExt.hs  TestSmallCheck.hs  TypSamples.hs  nameme-cgi.hs  polyfix-cgi.hs  polyfix.cabal
